tests/safe_abstractions/moved_safe_var_error.june
// error: moved variable accessed after move

struct Foo {
    z: i64
}

let foo = new safe Foo(z: 100)

let y = foo

println(foo.z)